fixed alignment issues
fixed alignment issues

--- a/style2.css
+++ b/style2.css
@@ -96,7 +96,7 @@ justify-content: center;
  }
 
  .right-side{
-    flex: 300px;
+    flex: 200px;
     padding-right:100px;
     align-items: center;
  }
